nginx_ingress_controller/hello-kubernetes-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - hw1.dalemorson.com
    - hw2.dalemorson.com
    secretName: letsencrypt-prod
  rules:
  - host: hw1.dalemorson.com
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
  - host: hw2.dalemorson.com
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-second
          servicePort: 80
